MainPages#Menu: Basic layout and design. *Fixed navbar collapse issue*

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,10 +13,15 @@
  *= require_tree .
  *= require_self
  */
-
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+body {
+  font-family: "Exo";
+  h1 {
+    text-shadow: 3px 3px 3px #aaa;
+  }
+}
 .fullscreen {
   background: url("backgroundimg.jpg");
   background-repeat: no-repeat;
@@ -24,4 +29,5 @@
   background-position: center;
   background-attachment: fixed;
   overflow: hidden;
+  padding-top: 110px;
 }
