--- a/app/assets/stylesheets/main_pages.scss
+++ b/app/assets/stylesheets/main_pages.scss
@@ -8,23 +8,17 @@
   margin-top: 500px !important;
 }
 
+.pagecontent {
+  margin-top: -43px;
+}
+
 #myCarousel {
-  margin-bottom: 110px;
+  margin-bottom: 100px;
 }
 .carousel-inner {
   width: 100%;
   position: relative;
   overflow: hidden;
-}
-
-.pagecontent {
-  border-style: solid;
-  border-width: 5px;
-  margin-top: 100px;
-}
-
-.fill {
-  width: 100%;
 }
 
 .carousel .item {
@@ -44,16 +38,49 @@
 
 .menu {
   background-color: white;
-  border-radius: 10px;
   padding-bottom: 15px;
+  h1 {
+    border-radius: 5px;
+    border-bottom-style: solid;
+    -webkit-box-shadow: 0px 1px 1px #aaa;
+    -moz-box-shadow: 0px 1px 1px #aaa;
+    box-shadow: 0px 1px 1px #aaa;
+    padding: 5px 0px 5px 25px;
+  }
+  h2 {
+    padding-left: 20px;
+    border-radius: 5px;
+    border-bottom-style: solid;
+    -webkit-box-shadow: 0px 1px 1px #aaa;
+    -moz-box-shadow: 0px 1px 1px #aaa;
+    box-shadow: 0px 1px 1px #aaa;
+  }
+  .menuitem {
+  // background-color: red;
+    border-radius: 5px;
+    .title {
+      font-family: 'Exo';
+      font-size: 32;
+      text-shadow: 3px 3px 4px #aaa;
+    }
+  }
+  .submenu {
+    margin-bottom: 15px;
+    border-radius: 5px;
+    text-shadow: 3px 3px 3px #aaa;
+    -webkit-box-shadow: 0px 1px 1px #aaa;
+    -moz-box-shadow: 0px 1px 1px #aaa;
+    min-height: 130px;
+  }
+  .menuname{
+    
+  }
+  .menudesc{
+    
+  }
+  .menuprice {
+    text-align: right;
+    padding-right: 5px;
+  }
 }
 
-.menuitem {
-  background-color: red;
-  border-radius: 5px;
-}
-
-.submenu {
-  background-color: grey;
-  margin-bottom: 15px;
-}
